--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="hdr">
     <nav class="nav">
-      <a class="brand" href="#home">Dimi Alazzi</a>
+      <a class="brand" href="#home">Dima Alazzi</a>
       <ul class="menu">
         <li><a href="#work">Work</a></li>
         <li><a href="#services">Services</a></li>
@@ -30,7 +30,7 @@
         <p class="lede">From social impact to AI and investment banking — I’ve built a career around understanding what moves humans, and how that shapes what we build next.</p>
         <div class="cta">
           <a class="btn primary" href="#work">View work</a>
-          <a class="btn ghost" href="assets/Dimi-Alazzi-CV.pdf" download>Download CV</a>
+          <a class="btn ghost" href="Dimi-Alazzi-CV.pdf" download>Download CV</a>
         </div>
       </div>
       <figure class="hero-image">
@@ -91,7 +91,7 @@
         <p class="tools">Figma / FigJam · UserZoom · Google Suite · Jupyter/Python (EDA, NLP) · Miro · Maze · Excel · PowerPoint · Streamlit</p>
       </div>
       <div class="about-img">
-        <img src="assets/dimi.jpg" alt="Dimi Alazzi portrait secondary">
+        <img src="dimi.jpg" alt="Dimi Alazzi portrait secondary">
       </div>
     </section>
 
