--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <figure class="hero-image">
-        <img src="assets/dimi.jpg" alt="Dimi Alazzi portrait">
+        <img src="dimi.jpg" alt="Dimi Alazzi portrait">
       </figure>
     </section>
 
