Correct spelling of 'Dimi' to 'Dima' in title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dimi Alazzi — Design Research</title>
+  <title>Dima Alazzi — Design Research</title>
   <meta name="description" content="Design research across AI, banking, and human systems.">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
