Correct spelling of 'Dimi' to 'Dima' in footer

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </main>
 
   <footer class="ftr">
-    <small>© 2025 Dimi Alazzi · Portfolio</small>
+    <small>© 2025 Dima Alazzi · Portfolio</small>
   </footer>
 </body>
 </html>
