Rename article title from 'Mass Affluent' to 'Wealth Advice'

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p>Designed governance-aware workflows for regulated advice; ensured compliance was integrated early without slowing delivery.</p>
         </article>
         <article>
-          <h3>Mass Affluent Journey Testing</h3>
+          <h3>Wealth Advice Journey Testing</h3>
           <p>Researched engagement patterns and decision triggers to optimise entry and conversion experiences.</p>
         </article>
         <article>
