Enhance email link with tracking event
Updated email link to include tracking event.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
     <section id="contact" class="section contact">
       <h2>Let’s Talk</h2>
       <p>For collaborations, advisory, or training.</p>
-      <a href="mailto:dimaalazzi@icloud.com" class="btn primary">Email me</a>
+      <a href="mailto:dimaalazzi@icloud.com" 
+         class="cta"
+         onclick="gtag('event', 'email_click', {'event_category': 'contact', 'event_label': 'email_button'});">
+         Email me
+      </a>
     </section>
   </main>
 
