Revise contact section for email engagement tracking
Updated the contact section with new email link and tracking event.

--- a/index.html
+++ b/index.html
@@ -103,15 +103,21 @@
       </div>
     </section>
 
-    <section id="contact" class="section contact">
-      <h2>Let’s Talk</h2>
-      <p>For collaborations, advisory, or training.</p>
-      <a href="mailto:dimaalazzi@icloud.com" 
-         class="cta"
-         onclick="gtag('event', 'email_click', {'event_category': 'contact', 'event_label': 'email_button'});">
-         Email me
-      </a>
-    </section>
+<section id="contact" class="section contact">
+  <h2>Let’s Talk</h2>
+  <p>For collaborations, advisory, or training.</p>
+
+  <a
+    href="mailto:dimaalazzi@icloud.com"
+    class="cta"
+    onclick="gtag('event', 'email_click', {
+      event_category: 'engagement',
+      event_label: 'contact_cta'
+    });"
+  >
+    Email Dima
+  </a>
+</section>
   </main>
 
   <footer class="ftr">
