--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
         <p class="kicker">UX Researcher, Mentor, Leader</p>
         <h1>I study how people and technology evolve together.</h1>
         <p class="lede">From social impact to AI and investment banking — I’ve built a career around understanding what moves humans, and how that shapes what we build next.</p>
-        <div class="cta">
-          <a class="btn primary" href="#work">View work</a>
-          <a class="btn ghost" href="Dimi-Alazzi-CV.pdf" download>Download CV</a>
+        <div class="floating-cta">
+          <a href="#work">View work</a>
+          <a href="DimaAlazzi-CV.pdf" download>Download CV</a>
         </div>
-      </div>
       <figure class="hero-image">
         <img src="dimi.jpg" alt="Dimi Alazzi portrait">
       </figure>
