--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R3XTVW7HLN"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-R3XTVW7HLN');
-  </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dima Alazzi — Design Research</title>
-  <meta name="description" content="Design research across AI, banking, and human systems.">
+  <title>Dimi Alazzi — UX Research</title>
+  <meta name="description" content="UX research across finance, AI, and complex systems.">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -20,7 +12,7 @@
 <body>
   <header class="hdr">
     <nav class="nav">
-      <a class="brand" href="#home">Dima Alazzi</a>
+      <a class="brand" href="#home">Dimi Alazzi</a>
       <ul class="menu">
         <li><a href="#work">Work</a></li>
         <li><a href="#services">Services</a></li>
@@ -36,30 +28,156 @@
         <p class="kicker">UX Researcher, Mentor, Leader</p>
         <h1>I study how people and technology evolve together.</h1>
         <p class="lede">From social impact to AI and investment banking — I’ve built a career around understanding what moves humans, and how that shapes what we build next.</p>
-        <div class="floating-cta">
-          <a href="#work">View work</a>
-          <a href="DimaAlazzi-CV.pdf" download>Download CV</a>
+        <div class="cta">
+          <a class="btn primary" href="#work">View work</a>
+          <a class="btn ghost" href="assets/Dimi-Alazzi-CV.pdf" download>Download CV</a>
         </div>
+      </div>
       <figure class="hero-image">
-        <img src="dimi.jpg" alt="Dimi Alazzi portrait">
+        <img src="assets/dimi.jpg" alt="Dimi Alazzi portrait">
       </figure>
     </section>
 
     <section id="work" class="section">
-      <h2>Selected Work</h2>
-      <div class="grid">
-        <article>
-          <h3>Advisor Compliance Dashboard</h3>
-          <p>Designed governance-aware workflows for regulated advice; ensured compliance was integrated early without slowing delivery.</p>
-        </article>
-        <article>
-          <h3>Wealth Advice Journey Testing</h3>
-          <p>Researched engagement patterns and decision triggers to optimise entry and conversion experiences.</p>
-        </article>
-        <article>
-          <h3>Digital Investing Strategy</h3>
-          <p>Mapped investor intent and system behaviours to define next-generation digital advice experience.</p>
-        </article>
+      <div class="section-head">
+        <h2>Selected work</h2>
+        <p class="muted">Home page teasers, with expandable detail—written to be shareable, not overshared.</p>
+      </div>
+
+      <div class="work-grid">
+        <details class="work-card">
+          <summary>
+            <div class="work-title">
+              <h3>Financial Advice & Decision-Making Research</h3>
+              <p class="work-sub">Strategic discovery & validation</p>
+            </div>
+            <span class="chip">Strategy</span>
+          </summary>
+          <div class="work-body">
+            <h4>Context</h4>
+            <p>In sophisticated financial environments, individuals balance a strong desire for autonomy with the need for reassurance at key decision moments. Experiences must support confidence without undermining control.</p>
+            <h4>The Challenge</h4>
+            <p>Understand when guidance meaningfully supports decision-making, when it introduces friction, and how digital experiences can adapt to different confidence and risk states.</p>
+            <h4>My Role & Approach</h4>
+            <p>I led end-to-end discovery and evaluative research across complex digital advice and investment journeys. This included moderated sessions spanning early consideration through active engagement, focusing on behavioural drivers such as confidence calibration, trust formation, and perceived risk.</p>
+            <p>The research examined how advice cues, language, and prompts influence decision momentum across different journey contexts.</p>
+            <h4>Outcome & Impact</h4>
+            <p>Insights informed experience strategy and prioritisation, helping teams introduce guidance where it strengthens decision confidence — and step back where autonomy is preferred.</p>
+            <p class="meta"><strong>Focus areas:</strong> Behavioural insight · Advice engagement · Moderated research · Complex decision UX</p>
+          </div>
+        </details>
+
+        <details class="work-card">
+          <summary>
+            <div class="work-title">
+              <h3>Digital Investing Journeys & Decision Confidence</h3>
+              <p class="work-sub">Mental models, risk, and reassurance</p>
+            </div>
+            <span class="chip">Journeys</span>
+          </summary>
+          <div class="work-body">
+            <h4>Context</h4>
+            <p>Digital investing tools often assume rational behaviour, yet emotional confidence plays a decisive role in how people act.</p>
+            <h4>The Challenge</h4>
+            <p>Understand how users approach investing journeys depending on entry point, perceived risk, and confidence level.</p>
+            <h4>My Role & Approach</h4>
+            <p>I researched mental models around autonomy, guidance, and reassurance, comparing expectations and behaviours across different digital contexts and journey states.</p>
+            <h4>Outcome & Impact</h4>
+            <p>The research clarified when users want self-directed control versus guided support, informing differentiated design and content strategies.</p>
+            <p class="meta"><strong>Focus areas:</strong> Decision psychology · Journey research · Digital UX</p>
+          </div>
+        </details>
+
+        <details class="work-card">
+          <summary>
+            <div class="work-title">
+              <h3>Governance-Led Discovery for a Compliance Dashboard</h3>
+              <p class="work-sub">Designing for accountability, not just usability</p>
+            </div>
+            <span class="chip">Enterprise</span>
+          </summary>
+          <div class="work-body">
+            <h4>Context</h4>
+            <p>Internal platforms in regulated environments must support oversight, clarity, and audit readiness — not just efficiency.</p>
+            <h4>The Challenge</h4>
+            <p>Design systems that balance operational usability with governance, ownership, and escalation needs.</p>
+            <h4>My Role & Approach</h4>
+            <p>I led discovery research focused on workflows around accountability, exception handling, and status visibility, working closely with cross-functional stakeholders and framing insights through a governance and risk lens.</p>
+            <h4>Outcome & Impact</h4>
+            <p>The work influenced early product direction, helping teams design systems that support transparency, oversight, and regulatory resilience.</p>
+            <p class="meta"><strong>Focus areas:</strong> Enterprise UX · Governance · Complex systems</p>
+          </div>
+        </details>
+
+        <details class="work-card">
+          <summary>
+            <div class="work-title">
+              <h3>Research Operations & Leadership Enablement</h3>
+              <p class="work-sub">From research activity to decision-ready intelligence</p>
+            </div>
+            <span class="chip">Ops</span>
+          </summary>
+          <div class="work-body">
+            <h4>Context</h4>
+            <p>As research demand grows, senior leaders often lack visibility into how research aligns with strategy, timing, and investment.</p>
+            <h4>The Challenge</h4>
+            <p>Enable leadership to prioritise, resource, and act — without exposing sensitive project detail.</p>
+            <h4>My Role & Approach</h4>
+            <p>I designed an integrated research enablement framework combining strategic research roadmapping, capacity forecasting across research streams, and a leadership-facing dashboard translating research activity into executive signals.</p>
+            <p>All components were deliberately framed through a governance and decision-support lens.</p>
+            <h4>Outcome & Impact</h4>
+            <ul>
+              <li>Improved leadership confidence in research planning and delivery</li>
+              <li>Clearer prioritisation and resourcing conversations</li>
+              <li>Reduced reactive and ad-hoc research</li>
+              <li>Embedded research earlier into strategic decision cycles</li>
+            </ul>
+            <p class="meta">This work reframed research as infrastructure for better decisions.</p>
+            <p class="meta"><strong>Focus areas:</strong> Research ops · Executive dashboards · Strategic planning · Governance</p>
+          </div>
+        </details>
+
+        <details class="work-card">
+          <summary>
+            <div class="work-title">
+              <h3>AI‑Assisted Research Intake</h3>
+              <p class="work-sub">Exploring AI as a research partner (concept)</p>
+            </div>
+            <span class="chip">AI</span>
+          </summary>
+          <div class="work-body">
+            <h4>Context</h4>
+            <p>Poorly defined research requests create downstream friction and misalignment.</p>
+            <h4>The Challenge</h4>
+            <p>Help stakeholders articulate clearer research needs before work begins.</p>
+            <h4>My Role & Approach</h4>
+            <p>I designed and prototyped a conversational, AI-assisted intake experience that interprets ambiguous inputs and surfaces clearer research direction — supporting, not replacing, researcher judgement.</p>
+            <h4>Outcome & Impact</h4>
+            <p>Demonstrated how AI can elevate upstream research quality and reduce friction between teams and researchers.</p>
+            <p class="meta"><strong>Focus areas:</strong> AI-augmented UX · Conversational design · Prototyping</p>
+          </div>
+        </details>
+
+        <details class="work-card">
+          <summary>
+            <div class="work-title">
+              <h3>Remote Research in Low‑Connectivity Contexts</h3>
+              <p class="work-sub">Research beyond ideal conditions</p>
+            </div>
+            <span class="chip">Impact</span>
+          </summary>
+          <div class="work-body">
+            <h4>Context</h4>
+            <p>Many research environments lack stable connectivity or access to standard tools.</p>
+            <h4>The Challenge</h4>
+            <p>Enable meaningful participation where traditional research methods fail.</p>
+            <h4>My Role & Approach</h4>
+            <p>I designed a research system allowing participants to contribute insights through locally accessible platforms, with qualitative inputs centralised for analysis.</p>
+            <h4>Outcome & Impact</h4>
+            <p>Enabled inclusive participation and informed decisions with insights that would otherwise be inaccessible.</p>
+            <p class="meta"><strong>Focus areas:</strong> Inclusive research · Constraint-led design · Global UX</p>
+          </div>
+        </details>
       </div>
     </section>
 
@@ -68,7 +186,7 @@
       <div class="grid two">
         <article><h3>End‑to‑end UX Research</h3><p>Discovery → evaluative → iterative. Hypothesis‑led, evidence‑driven, outcome‑focused.</p></article>
         <article><h3>Design Thinking Workshops</h3><p>Empathy mapping, ideation sprints, prioritisation and decision framing.</p></article>
-        <article><h3>Training & Mentorship</h3><p>Upskill teams on UX research, HCD, interview technique, and analysis methods.</p></article>
+        <article><h3>Training & Mentorship</h3><p>Upskill teams on UX research and HCD—from basics to confident delivery.</p></article>
         <article><h3>0→1 Research Practice</h3><p>Set up research function, ops, templates, intake, and governance—built to scale.</p></article>
       </div>
     </section>
@@ -95,32 +213,22 @@
           <li>Quant signal reading</li>
         </ul>
         <h3 class="subhead">Tools</h3>
-        <p class="tools">Figma / FigJam · UserZoom · Google Suite · Jupyter/Python (EDA, NLP) · Miro · Maze · Excel · PowerPoint · Streamlit</p>
+        <p class="tools">Figma / FigJam · UserZoom · Jupyter/Python · Miro · Maze · Excel · PowerPoint · Streamlit</p>
       </div>
       <div class="about-img">
-        <img src="dimi.jpg" alt="Dimi Alazzi portrait secondary">
+        <img src="assets/dimi.jpg" alt="Dimi Alazzi portrait secondary">
       </div>
     </section>
 
-<section id="contact" class="section contact">
-  <h2>Let’s Talk</h2>
-  <p>For collaborations, advisory, or training.</p>
-
-  <a
-    href="mailto:dimaalazzi@icloud.com"
-    class="cta"
-    onclick="gtag('event', 'email_click', {
-      event_category: 'engagement',
-      event_label: 'contact_cta'
-    });"
-  >
-    Email Dima
-  </a>
-</section>
+    <section id="contact" class="section contact">
+      <h2>Let’s Talk</h2>
+      <p>For collaborations, advisory, or training.</p>
+      <a href="mailto:dimaalazzi@icloud.com" class="btn primary">Email me</a>
+    </section>
   </main>
 
   <footer class="ftr">
-    <small>© 2025 Dima Alazzi · Portfolio</small>
+    <small>© 2025 Dimi Alazzi · Portfolio</small>
   </footer>
 </body>
 </html>
