Correct name spelling from 'Dimi' to 'Dima'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dimi Alazzi — UX Research</title>
+  <title>Dima Alazzi — UX Research</title>
   <meta name="description" content="UX research across finance, AI, and complex systems.">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
   <header class="hdr">
     <nav class="nav">
-      <a class="brand" href="#home">Dimi Alazzi</a>
+      <a class="brand" href="#home">Dima Alazzi</a>
       <ul class="menu">
         <li><a href="#work">Work</a></li>
         <li><a href="#services">Services</a></li>
@@ -27,21 +27,21 @@
       <div class="hero-copy">
         <p class="kicker">UX Researcher, Mentor, Leader</p>
         <h1>I study how people and technology evolve together.</h1>
-        <p class="lede">From social impact to AI and investment banking — I’ve built a career around understanding what moves humans, and how that shapes what we build next.</p>
+        <p class="lede">From social impact to AI and investment banking- I’ve built a career around understanding what moves humans, and how that shapes what we build next.</p>
         <div class="cta">
           <a class="btn primary" href="#work">View work</a>
           <a class="btn ghost" href="assets/Dimi-Alazzi-CV.pdf" download>Download CV</a>
         </div>
       </div>
       <figure class="hero-image">
-        <img src="assets/dimi.jpg" alt="Dimi Alazzi portrait">
+        <img src="dimi.jpg" alt="Dimi Alazzi portrait">
       </figure>
     </section>
 
     <section id="work" class="section">
       <div class="section-head">
         <h2>Selected work</h2>
-        <p class="muted">Home page teasers, with expandable detail—written to be shareable, not overshared.</p>
+        <p class="muted"></p>
       </div>
 
       <div class="work-grid">
@@ -228,7 +228,7 @@
   </main>
 
   <footer class="ftr">
-    <small>© 2025 Dimi Alazzi · Portfolio</small>
+    <small>© 2025 Dima Alazzi · Portfolio</small>
   </footer>
 </body>
 </html>
