Update image source path in index.html

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <p class="tools">Figma / FigJam · UserZoom · Jupyter/Python · Miro · Maze · Excel · PowerPoint · Streamlit</p>
       </div>
       <div class="about-img">
-        <img src="assets/dimi.jpg" alt="Dimi Alazzi portrait secondary">
+        <img src="dimi.jpg" alt="Dimi Alazzi portrait secondary">
       </div>
     </section>
 
